--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,7 @@
         <div>
             <h2><%= post.title %></h2>
             <p><%= post.content.substring(0, 100) %>...</p>
+            <a href="/posts/<%=post.id%>">Read More</a>
         </div>
         <hr>
     <% });  %>
