--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,8 +1,9 @@
 <%- include('partials/header.ejs') %>
 <hr>
 
-
-
+<h2><%= post.title %></h2>
+<p><%= post.content %></p>
+<a href="/">🔙 Back to Home</a>
 
 
 <hr>
