--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs') %>
 <hr>
 
-<h2><%= post.title %></h2>
+<h1>--- <%= post.title %> ---</h1>
 <p><%= post.content %></p>
 <a href="/">🔙 Back to Home</a>
 
