--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,11 +5,14 @@
     <hr>
 <% } else {%>
     <% posts.forEach(post => { %>
-        <div>
+        <div class="post">
             <h2><%= post.title %></h2>
             <p><%= post.content.substring(0, 100) %>...</p>
             <a href="/posts/<%=post.id%>">Read More</a>
             <a href="/edit/<%=post.id%>">Edit</a>
+            <form action="/delete/<%=post.id%>" method="POST" style="display: inline;">
+                <button type="submit">Delete</button>
+            </form>
         </div>
         <hr>
     <% });  %>
