--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Application</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <div>
@@ -15,5 +16,3 @@
             <button type="submit">Create</button>
         </form>
     </div>
-</body>
-</html>
