--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,12 @@
 <%- include('partials/header.ejs') %>
-<hr>
+
 <% if(posts.length===0) { %>
     <h3>No posts published yet.</h3>
     <hr>
 <% } else {%>
     <% posts.forEach(post => { %>
         <div class="post">
-            <h2><%= post.title %></h2>
+            <a id="post-title" href="/posts/<%=post.id%>"><h2><%= post.title %></h2></a>
             <p><%= post.content.substring(0, 100) %>...</p>
             <a href="/posts/<%=post.id%>">Read More</a>
             <a href="/edit/<%=post.id%>">Edit</a>
@@ -14,7 +14,7 @@
                 <button type="submit">Delete</button>
             </form>
         </div>
-        <hr>
+        
     <% });  %>
 <% } %>
 
